After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752053 - goom: Initialised variables to remove compiler warnings
goom: Initialised variables to remove compiler warnings
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-07 08:38 UTC by Tobias Mueller
Modified: 2015-08-16 13:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.18 KB, patch)
2015-07-07 08:38 UTC, Tobias Mueller
committed Details | Review

Description Tobias Mueller 2015-07-07 08:38:09 UTC
Created attachment 306982 [details] [review]
patch

goom_core.c: In function 'goom_update':
goom_core.c:685:5: error: 'param2' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     goom_lines_switch_to (goomInfo->gmline2, mode, param2, amplitude, couleur);
     ^
goom_core.c:684:5: error: 'param1' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     goom_lines_switch_to (goomInfo->gmline1, mode, param1, amplitude, couleur);
Comment 1 Sebastian Dröge (slomo) 2015-07-07 10:19:22 UTC
commit 6faeb751708730a19f2ac9322b62afa4b086cc57
Author: Tobias Mueller <muelli@cryptobitch.de>
Date:   Thu Jul 2 08:52:43 2015 +0200

    goom: Initialised variables to remove compiler warnings
    
    goom_core.c: In function 'goom_update':
    goom_core.c:685:5: error: 'param2' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         goom_lines_switch_to (goomInfo->gmline2, mode, param2, amplitude, couleur);
         ^
    goom_core.c:684:5: error: 'param1' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         goom_lines_switch_to (goomInfo->gmline1, mode, param1, amplitude, couleur);
         ^
    
    https://bugzilla.gnome.org/show_bug.cgi?id=752053